<resources>
    <string name="app_name">Do It</string>
    <string name="action_settings">设置</string>
    <string name="action_history">历史</string>
    <string name="history">回顾</string>
    <string name="action_color">调色板</string>
    <string name="action_add">添加</string>
    <string name="action_done">完成</string>
    <string name="action_next">下一步</string>
    <string name="action_search">搜索</string>
    <string name="sleep">休息</string>
    <string name="plan">计划</string>
    <string name="backlog">待办</string>
    <string name="alert">提醒</string>
    <string name="photo">此刻</string>
    <string name="punch">打卡</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="add_tag">添加标签</string>
    <string name="add_target_title">创建一个目标</string>
    <string name="add_punch_title">打卡</string>
    <string name="add_backlog_title">待办</string>
    <string name="color_dialog_title">调色板</string>
    <string name="add_target_hint">输入目标名称</string>
    <string name="add_punch_hint">一句话描述 . . . </string>
    <string name="add_backlog_hint">添加待办事项 . . . </string>
    <string name="add_target_prefill"></string>
    <string name="action_redo_plan">重复任务管理</string>
    <string name="add_alert">新建提醒</string>
    <string name="add_clock">添加提醒</string>
    <string name="add_link">关联应用</string>
    <string name="plan_start_time">任务开始时间</string>
    <string name="plan_end_time">任务结束时间</string>
    <string name="action_confirm">确认</string>
    <string name="action_cancel">取消</string>
    <string name="add_plan">新建计划</string>
    <string name="empty_plan">今日暂无安排 . . .</string>
    <string name="empty_backlog">暂无待办事项 . . .</string>
    <string name="empty_plan_history">当日未设定计划</string>
    <string name="menu_delete">删除</string>
    <string name="alert_time">提醒时刻</string>
    <string name="modify_plan">更改计划</string>
    <string name="modify_alert">更改提醒</string>
    <string name="delete_alert">删除提醒</string>
    <string name="delete_all_type">删除记录</string>
    <string name="delete_plan">删除计划</string>
    <string name="delete_target">删除目标</string>
    <string name="use_today_template">使用今日模板</string>
    <string name="empty_template">重新添加</string>
    <string name="tomorrow_plan">明日计划</string>
    <string name="action_add_tomorrow_plan">明日计划</string>
    <string name="action_day">白天模式</string>
    <string name="action_night">夜间模式</string>
    <string name="select_template">选择模板</string>
    <string name="add_photo">此刻</string>
    <string name="rationale_camera_and_read_storage"><![CDATA[应用需要读取您的相册&使用相机功能]]></string>
    <string name="share">分享</string>
    <string name="calendar_date_picker_result_values">%1$s 年 %2$s 月 %3$s 日</string>
</resources>
