<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".module.main.MainActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/menu_add"
        android:orderInCategory="1"
        android:title="@string/action_add"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_add_alert"
                android:title="@string/add_alert" />
            <item
                android:id="@+id/action_add_plan"
                android:title="@string/add_plan" />
            <item
                android:id="@+id/action_add_photo"
                android:title="@string/add_photo" />
        </menu>
    </item>
    <item
        android:id="@+id/action_set_color"
        android:icon="@drawable/menu_color"
        android:orderInCategory="1"
        android:title="@string/action_color"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/action_set_image"
        android:icon="@drawable/menu_add_pic"
        android:orderInCategory="2"
        android:title="@string/action_add"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="3"
        android:icon="@drawable/menu_delete"
        android:title="@string/menu_delete"
        app:showAsAction="never" />
</menu>
