<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".module.planlist.PlanListActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/menu_add"
        android:orderInCategory="1"
        android:title="@string/action_add"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_add_alert"
                android:title="@string/add_alert" />
            <item
                android:id="@+id/action_add_plan"
                android:title="@string/add_plan" />
        </menu>
    </item>
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/menu_history"
        android:orderInCategory="2"
        android:title="@string/action_history"
        app:showAsAction="ifRoom" />
    <!--<item-->
        <!--android:id="@+id/action_night"-->
        <!--android:icon="@drawable/menu_night"-->
        <!--android:orderInCategory="3"-->
        <!--android:title="@string/action_night"-->
        <!--app:showAsAction="ifRoom" />-->
    <!--<item-->
        <!--android:id="@+id/action_day"-->
        <!--android:icon="@drawable/menu_day"-->
        <!--android:orderInCategory="3"-->
        <!--android:title="@string/action_day"-->
        <!--app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/action_add_tomorrow_plan"
        android:orderInCategory="4"
        android:title="@string/action_add_tomorrow_plan"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="5"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
