<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundIV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/example_1" />

    <me.xihuxiaolong.justdoit.common.widget.DayNightBackgroundView
        android:id="@+id/day_night_background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:animationDuration="0"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:fitsSystemWindows="true"
        app:contentInsetStartWithNavigation="0dp"
        app:title="@string/add_plan"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <me.xihuxiaolong.justdoit.common.widget.StartAndEndTimeView
                android:id="@+id/startAndEndTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/contentET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="输入计划"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                app:met_baseColor="@color/titleTextColor"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/titleTextColor"
                app:met_textColor="@color/titleTextColor"
                app:met_textColorHint="@color/titleTextColor" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/add_tag" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_tag"
                        android:textColor="@color/titleTextColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/add_clock" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_clock"
                        android:textColor="@color/titleTextColor" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
